[gd_scene load_steps=18 format=2]

[ext_resource path="res://Drawing_board.gd" type="Script" id=1]
[ext_resource path="res://White_bg.png" type="Texture" id=2]
[ext_resource path="res://UI.gd" type="Script" id=3]
[ext_resource path="res://kenvector_future_thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Transparent_bg.png" type="Texture" id=5]
[ext_resource path="res://Pixel_outline.png" type="Texture" id=6]
[ext_resource path="res://Pixel_outline.gd" type="Script" id=7]
[ext_resource path="res://toolFill.png" type="Texture" id=8]
[ext_resource path="res://toolEraser.png" type="Texture" id=9]
[ext_resource path="res://toolPencil.png" type="Texture" id=10]
[ext_resource path="res://uipack_fixed/PNG/grey_button11.png" type="Texture" id=11]
[ext_resource path="res://ColorPicker.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 49, 45 )
margin_left = 4.0
margin_right = 4.0
modulate_color = Color( 0.243137, 0.235294, 0.27451, 1 )

[sub_resource type="DynamicFont" id=3]
size = 7
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 7
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Drawing_board" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = 42.0
margin_bottom = 42.0
rect_scale = Vector2( 64, 64 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pixels" type="Node2D" parent="."]
pause_mode = 2

[node name="Pixel" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Pixel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pixel/Area2D"]
shape = SubResource( 1 )

[node name="Pixel_outline" type="Sprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( -2.05636e-06, 1.90735e-06 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 32, 32 )
anchor_mode = 0
current = true
limit_left = 32
limit_top = 32
limit_smoothed = true

[node name="UI" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = 672.0
margin_bottom = 672.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -211.0
margin_right = 188.0
margin_bottom = 251.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="AcceptDialog" parent="UI"]
margin_right = 83.0
margin_bottom = 58.0
mouse_filter = 2
window_title = "Error!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 576.0
mouse_filter = 0
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tools" type="HBoxContainer" parent="CanvasLayer"]
pause_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
rect_min_size = Vector2( 0, 64 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P" type="Button" parent="CanvasLayer/Tools"]
margin_right = 62.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="Button" parent="CanvasLayer/Tools"]
margin_left = 66.0
margin_right = 128.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Button" parent="CanvasLayer/Tools"]
margin_left = 132.0
margin_right = 194.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="O" type="Button" parent="CanvasLayer/Tools"]
margin_left = 198.0
margin_right = 260.0
margin_bottom = 64.0
rect_min_size = Vector2( 62, 64 )
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 12 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="Button" parent="CanvasLayer/Tools"]
margin_left = 264.0
margin_right = 326.0
margin_bottom = 64.0
rect_min_size = Vector2( 62, 64 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Tools/C"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -27.0
margin_right = 26.0
margin_bottom = 27.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D" type="Button" parent="CanvasLayer/Tools"]
margin_left = 330.0
margin_right = 392.0
margin_bottom = 64.0
rect_min_size = Vector2( 62, 64 )
custom_fonts/font = SubResource( 3 )
text = " Depth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3D" type="Button" parent="CanvasLayer/Tools"]
margin_left = 396.0
margin_right = 465.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = SubResource( 3 )
text = "convert To 3d"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Tools"]
margin_left = 469.0
margin_right = 531.0
margin_bottom = 64.0
rect_min_size = Vector2( 62, 64 )
custom_fonts/font = SubResource( 5 )
align = 1
max_length = 1
placeholder_text = "depth paint"

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Tools"]
margin_left = 535.0
margin_right = 597.0
margin_bottom = 64.0
rect_min_size = Vector2( 62, 64 )
custom_fonts/font = SubResource( 6 )
text = "S"

[connection signal="color_changed" from="UI/ColorPicker" to="UI" method="_on_ColorPicker_color_changed"]
[connection signal="mouse_entered" from="CanvasLayer/BG" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/BG" to="UI" method="_on_Button_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Tools/P" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tools/P" to="UI" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Tools/P" to="UI" method="_on_P_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Tools/E" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tools/E" to="UI" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Tools/E" to="UI" method="_on_E_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Tools/B" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tools/B" to="UI" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Tools/B" to="UI" method="_on_B_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Tools/O" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tools/O" to="UI" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Tools/O" to="UI" method="_on_O_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Tools/C" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tools/C" to="UI" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Tools/C" to="UI" method="_on_C_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Tools/D" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tools/D" to="UI" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Tools/D" to="UI" method="_on_D_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Tools/3D" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tools/3D" to="UI" method="_on_Button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Tools/3D" to="UI" method="_on_3D_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Tools/LineEdit" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tools/LineEdit" to="UI" method="_on_Button_mouse_exited"]
[connection signal="text_changed" from="CanvasLayer/Tools/LineEdit" to="UI" method="_on_LineEdit_text_changed"]
[connection signal="mouse_entered" from="CanvasLayer/Tools/CheckBox" to="UI" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Tools/CheckBox" to="UI" method="_on_Button_mouse_exited"]
[connection signal="toggled" from="CanvasLayer/Tools/CheckBox" to="UI" method="_on_CheckBox_toggled"]
